plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cn.nihility'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
    maven { url = 'https://maven.aliyun.com/repository/public/' }
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	/* springdoc 3.x 目标 Spring Boot 4，与本项目的 Spring Boot 3.5 不兼容，固定使用 2.x 系列的最新版 */
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'

    implementation 'org.mapstruct:mapstruct:1.6.3'

    implementation 'org.flywaydb:flyway-mysql:12.8.1'
    implementation 'com.mysql:mysql-connector-j:9.6.0'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    implementation 'org.mybatis:mybatis-spring:3.0.5'
    /* MyBatis-Plus 3.5.x 把分页拦截器依赖的 JSQLParser 拆到了独立模块，
       PaginationInnerInterceptor 需要它才能生效 */
    implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.16'
    implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.16'

    /* excel 操作 */
    implementation 'org.apache.poi:poi:5.4.1'
    implementation 'org.apache.poi:poi-ooxml:5.4.1'
    implementation 'org.apache.xmlbeans:xmlbeans:5.3.0'

    implementation 'org.bouncycastle:bcprov-jdk18on:1.84'

    /* 转换脚本语法校验（不执行），23.1.x 版本线对应 "GraalVM for JDK 21" LTS 发行版，
       与本项目 JDK 21 工具链对齐；js-community 为纯 Java 解释执行实现，不需要
       GraalVM 原生发行版，可在标准 OpenJDK 21 上运行 */
    implementation 'org.graalvm.polyglot:polyglot:23.1.12'
    implementation 'org.graalvm.polyglot:js-community:23.1.12'

    implementation 'com.lmax:disruptor:4.0.0'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.6.4'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

/* Gradle 指定编码,Java 编译的时候缺省状态下会因为中文字符而失败 */
[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xlint:deprecation"
}
